Z-Index Fix

--- a/drag_and_drop_v2/public/css/drag_and_drop.css
+++ b/drag_and_drop_v2/public/css/drag_and_drop.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     position: relative;
+    z-index: 1;
 }
 
 .xblock--drag-and-drop .resize-detector {
